Removed dependency on 'org.apache.commons.io'
Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>