@@ -18,11 +18,11 @@ import static org.junit.Assert.*;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.Locale;
 import java.util.Set;
 
-import org.apache.commons.io.IOUtils;
 import org.junit.Before;
 import org.junit.Test;
 import org.openhab.core.ui.icon.IconSet.Format;
@@ -96,14 +96,14 @@ public class AbstractResourceIconProviderTest {
     @Test
     public void testWithQuantityTypeState() throws IOException {
         try (InputStream is = provider.getIcon("x", "classic", "34 °C", Format.PNG)) {
-            assertThat(IOUtils.toString(is), is("x-30.png"));
+            assertThat(new String(is.readAllBytes(), StandardCharsets.UTF_8), is("x-30.png"));
         }
     }
 
     @Test
     public void testWithStringTypeState() throws IOException {
         try (InputStream is = provider.getIcon("x", "classic", "y z", Format.PNG)) {
-            assertThat(IOUtils.toString(is), is("x-y z.png"));
+            assertThat(new String(is.readAllBytes(), StandardCharsets.UTF_8), is("x-y z.png"));
         }
     }
 }
